--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,9 @@
  *= require_tree .
  *= require_self
  */
+ @import "chartkick";
+@import "chart.js";
+
 /* Pagination container */
 .pagination {
   display: flex;
@@ -89,4 +92,7 @@
   background-color: #6c757d; /* Secondary color background on hover */
   color: #fff; /* White text on hover */
 }
-
+.logInIndex
+{
+  z-index: 10000;
+}
