--- a/app/views/doctors/_form.html.erb
+++ b/app/views/doctors/_form.html.erb
@@ -9,28 +9,32 @@
         
         <div class="form-group">
           <%= f.label :name, class: "form-label" %>
-          <%= f.text_field :name, class: "form-control", autofocus: true ,required: true %>
+          <%= f.text_field :name, class: "form-control", autofocus: true ,required: true,minlength: 3, maxlength: 10 %>
         </div>
         
+        <% if @doctor.new_record? %>
         <div class="form-group">
           <%= f.label :email, class: "form-label" %>
           <%= f.email_field :email, class: "form-control", autocomplete: "email" ,required: true %>
         </div>
         
-        <div class="form-group">
-          <%= f.label :password, class: "form-label" %>
-          <%= f.password_field :password, class: "form-control", autocomplete: "new-password" ,required: true %>
-          <% if @minimum_password_length %>
-            <br />
-            <em><%= @minimum_password_length %> characters minimum</em>
-          <% end %>
-        </div>
         
-        <div class="form-group">
-          <%= f.label :password_confirmation, class: "form-label" %><br />
-          <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" ,required: true  %>
-        </div>
-        
+
+          <div class="form-group">
+            <%= f.label :password, class: "form-label" %>
+            <%= f.password_field :password, class: "form-control", autocomplete: "new-password" ,required: true %>
+            <% if @minimum_password_length %>
+              <br />
+              <em><%= @minimum_password_length %> characters minimum</em>
+            <% end %>
+          </div>
+          
+          <div class="form-group">
+            <%= f.label :password_confirmation, class: "form-label" %><br />
+            <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" ,required: true  %>
+          </div>
+        <%end%>
+
         <div class="form-group">
           <%= f.label :gender, class: "form-label" %>
           <%= f.select :gender, options_for_select([['Male', 'male'], ['Female', 'female'], ['Other', 'other']]), {}, class: "form-control" ,required: true %>
@@ -48,7 +52,7 @@
           </div>
         <% end %>
 
-        <div class="form-group text-center">
+        <div class="form-group text-center mt-5">
           <%= f.submit @doctor.new_record? ? 'Create Doctor' : 'Update Doctor', class: 'btn btn-primary btn-block' %>
         </div>
       <% end %>
