--- a/app/views/hospitals/_form.html.erb
+++ b/app/views/hospitals/_form.html.erb
@@ -10,7 +10,7 @@
           <div class="flex">
             <div class="form-group">
               <%= form.label :name, class: 'form-label' %>
-              <%= form.text_field :name, class: 'form-control', placeholder: 'Hospital Name', required: true %>
+              <%= form.text_field :name, class: 'form-control', placeholder: 'Hospital Name', required: true, minlength: 4, maxlength: 15 %>
             </div>
 
             <div class="form-group mt-3">
@@ -20,7 +20,7 @@
 
             <div class="form-group mt-3">
               <%= form.label :email, class: 'form-label' %>
-              <%= form.email_field :email, class: 'form-control', placeholder: 'Email', required: true %>
+              <%= form.email_field :email, class: 'form-control', placeholder: 'Email', required: true,autocomplete: true %>
             </div>
 
             <div class="form-group mt-3">
@@ -28,10 +28,7 @@
               <%= form.text_field :license_no, class: 'form-control', placeholder: 'License Number', required: true %>
             </div>
 
-            <div class="form-group mt-3">
-              <%= form.label :slug, class: 'form-label' %>
-              <%= form.text_field :slug, class: 'form-control', placeholder: 'Slug', required: true %>
-            </div>
+            
 
             <%= form.hidden_field :user_id, value: current_user.id %>
 
