--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,12 +45,22 @@
         
         </div>
        <% else %>
-         
+           <div class="container mt-3 position-absolute  logInIndex">
+                <% flash.each do |type, message| %>
+                  <% type = (type == 'notice' ? 'success' : (type == 'alert' ? 'danger' : type)) %>
+                  <div class="alert alert-<%= type %> alert-dismissible fade show" role="alert">
+                    <%= message %>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                  </div>
+                <% end %>
+            </div>
             <%= yield %>
          
         <% end %>
     </div>
     
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
   </body>
 </html>
