--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -9,27 +9,29 @@
         
         <div class="form-group">
           <%= f.label :name, class: "form-label" %>
-          <%= f.text_field :name, class: "form-control", autofocus: true ,required: true %>
+          <%= f.text_field :name, class: "form-control", autofocus: true ,required: true, minlength: 3, maxlength: 10 %>
         </div>
         
-        <div class="form-group">
-          <%= f.label :email, class: "form-label" %>
-          <%= f.email_field :email, class: "form-control", autocomplete: "email",required: true  %>
-        </div>
+        <% if @patient.new_record? %>
+          <div class="form-group">
+            <%= f.label :email, class: "form-label" %>
+            <%= f.email_field :email, class: "form-control", autocomplete: "email",required: true  %>
+          </div>
         
-        <div class="form-group">
-          <%= f.label :password, class: "form-label" %>
-          <%= f.password_field :password, class: "form-control", autocomplete: "new-password" ,required: true %>
-          <% if @minimum_password_length %>
-            <br />
-            <em><%= @minimum_password_length %> characters minimum</em>
-          <% end %>
-        </div>
-        
-        <div class="form-group">
-          <%= f.label :password_confirmation, class: "form-label" %><br />
-          <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" ,required: true %>
-        </div>
+          <div class="form-group">
+            <%= f.label :password, class: "form-label" %>
+            <%= f.password_field :password, class: "form-control", autocomplete: "new-password" ,required: true %>
+            <% if @minimum_password_length %>
+              <br />
+              <em><%= @minimum_password_length %> characters minimum</em>
+            <% end %>
+          </div>
+          
+          <div class="form-group">
+            <%= f.label :password_confirmation, class: "form-label" %><br />
+            <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" ,required: true %>
+          </div>
+        <%end%>
         
         <div class="form-group">
           <%= f.label :gender, class: "form-label" %>
@@ -49,7 +51,7 @@
           
         <% end %>
 
-        <div class="form-group text-center">
+        <div class="form-group text-center mt-5">
           <%= f.submit @patient.new_record? ? 'Create Patient' : 'Update Patient', class: 'btn btn-primary btn-block' %>
         </div>
       <% end %>
