Doctor Status toggle  Updated

--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -43,10 +43,13 @@
             <%= detail_form.label :disease %>
             <%= detail_form.text_field :disease, class: 'form-control' %>
           </div>
+
+        <%unless @patient.new_record? %>
          <div class="form-group">
           <%= detail_form.label :status %>
           <%= detail_form.select :status, options_for_select([['Alive', 'alive'], ['Disease', 'disease'], ['Dead', 'dead']]), {}, class: 'form-control' %>
         </div>
+        <%end%>
 
           
         <% end %>
